<?xml version="1.0" encoding="UTF-8"?>

<!--
SPDX-FileCopyrightText: 2022 Zextras <https://www.zextras.com>

SPDX-License-Identifier: AGPL-3.0-only
-->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <licenses>
    <license>
      <comments>Copyright (C) 2022 Zextras, https://www.zextras.com</comments>
      <name>AGPL-3.0-only</name>
    </license>
  </licenses>

  <groupId>com.zextras.carbonio.user-management</groupId>
  <artifactId>carbonio-user-management</artifactId>
  <version>0.4.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>carbonio-user-management</name>
  <url>https://www.github.com/Zextras/carbonio-user-management</url>

  <modules>
    <module>boot</module>
    <module>core</module>
    <module>generated</module>
  </modules>

  <properties>
    <assertj.version>3.24.2</assertj.version>
    <caffeine.version>3.1.6</caffeine.version>
    <carbonio-mailbox-sdk.version>1.0.0</carbonio-mailbox-sdk.version>
    <commons-io.version>2.13.0</commons-io.version>
    <guice.version>6.0.0</guice.version>
    <jackson.version>2.15.2</jackson.version>
    <javaee-api.version>8.0.1</javaee-api.version>
    <jetty-version>10.0.15</jetty-version>
    <jsonassert.version>1.5.1</jsonassert.version>
    <junit5.version>5.10.0</junit5.version>
    <logback-classic.version>1.4.8</logback-classic.version>
    <mock-server.version>5.15.0</mock-server.version>
    <mockito.version>5.4.0</mockito.version>
    <resteasy.version>4.7.9.Final</resteasy.version>
    <swagger-core-version>1.6.11</swagger-core-version>

    <!-- Plugins -->
    <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
    <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
    <maven-failsafe.version>3.0.0-M9</maven-failsafe.version>
    <maven-jacoco.version>0.8.8</maven-jacoco.version>
    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
    <maven-surfire.version>3.0.0-M9</maven-surfire.version>
    <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
    <openapi-generator-maven-plugin.version>6.6.0</openapi-generator-maven-plugin.version>

    <!-- Other properties -->
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Flags to skip/run tests and the report generation -->
    <skip.integration.tests>true</skip.integration.tests>
    <skip.unit.tests>true</skip.unit.tests>
    <skip.jacoco.full.report.generation>true</skip.jacoco.full.report.generation>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Guice dependencies -->
      <dependency>
        <groupId>com.google.inject</groupId>
        <artifactId>guice</artifactId>
        <version>${guice.version}</version>
      </dependency>

      <dependency>
        <groupId>org.jboss.resteasy</groupId>
        <artifactId>resteasy-guice</artifactId>
        <version>${resteasy.version}</version>
      </dependency>

      <!-- Logger -->
      <dependency>
        <artifactId>logback-classic</artifactId>
        <groupId>ch.qos.logback</groupId>
        <version>${logback-classic.version}</version>
      </dependency>

      <!-- Jetty dependencies -->
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-server</artifactId>
        <version>${jetty-version}</version>
      </dependency>

      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlet</artifactId>
        <version>${jetty-version}</version>
      </dependency>

      <!-- JavaEE API -->
      <dependency>
        <groupId>javax</groupId>
        <artifactId>javaee-api</artifactId>
        <version>${javaee-api.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- RESTEasy dependencies -->
      <dependency>
        <groupId>org.jboss.resteasy</groupId>
        <artifactId>resteasy-core</artifactId>
        <version>${resteasy.version}</version>
      </dependency>

      <dependency>
        <groupId>org.jboss.resteasy</groupId>
        <artifactId>resteasy-servlet-initializer</artifactId>
        <version>${resteasy.version}</version>
      </dependency>

      <dependency>
        <groupId>org.jboss.resteasy</groupId>
        <artifactId>resteasy-jackson2-provider</artifactId>
        <version>${resteasy.version}</version>
      </dependency>

      <!-- Jackson dependencies -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${jackson.version}</version>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jackson.version}</version>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jsr310</artifactId>
        <version>${jackson.version}</version>
      </dependency>

      <!-- Swagger dependencies -->
      <dependency>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-annotations</artifactId>
        <version>${swagger-core-version}</version>
      </dependency>

      <dependency>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-jaxrs</artifactId>
        <version>${swagger-core-version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- Cache -->
      <dependency>
        <groupId>com.github.ben-manes.caffeine</groupId>
        <artifactId>caffeine</artifactId>
        <version>${caffeine.version}</version>
      </dependency>

      <!-- Mailbox -->
      <dependency>
        <groupId>com.zextras</groupId>
        <artifactId>carbonio-mailbox-sdk</artifactId>
        <version>${carbonio-mailbox-sdk.version}</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit5.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${junit5.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.mock-server</groupId>
        <artifactId>mockserver-netty-no-dependencies</artifactId>
        <version>${mock-server.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.mock-server</groupId>
        <artifactId>mockserver-client-java-no-dependencies</artifactId>
        <version>${mock-server.version}</version>
        <scope>test</scope>
      </dependency>

      <!-- Helper to test JSON responses -->
      <dependency>
        <groupId>org.skyscreamer</groupId>
        <artifactId>jsonassert</artifactId>
        <version>${jsonassert.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.openapitools</groupId>
          <artifactId>openapi-generator-maven-plugin</artifactId>
          <version>${openapi-generator-maven-plugin.version}</version>
          <executions>
            <execution>
              <configuration>
                <generatorName>jaxrs-resteasy</generatorName>
                <groupId>com.zextras.carbonio.user_management</groupId>
                <artifactId>carbonio-user-management-generated</artifactId>
                <apiPackage>com.zextras.carbonio.user_management.generated</apiPackage>
                <packageName>com.zextras.carbonio.user_management</packageName>
                <modelPackage>com.zextras.carbonio.user_management.generated.model</modelPackage>
                <configOptions>
                  <artifactDescription>User Management generated</artifactDescription>
                  <librart>resteasy</librart>
                  <serializationLibrary>jackson</serializationLibrary>
                  <dateLibrary>java8</dateLibrary>
                </configOptions>
                <generateApiTests>false</generateApiTests>
                <inputSpec>
                  resources/user-management.yaml
                </inputSpec>
                <output>./</output>
              </configuration>
              <goals>
                <goal>generate</goal>
              </goals>
              <phase>
                generate-sources
              </phase>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven-resources-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${build-helper-maven-plugin.version}</version>
          <executions>
            <execution>
              <configuration>
                <sources>
                  <source>
                    src/gen/java
                  </source>
                </sources>
              </configuration>
              <goals>
                <goal>add-source</goal>
              </goals>
              <id>add-source</id>
              <phase>generate-sources</phase>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>zextras-java-sdk</id>
      <name>Zextras public maven repo</name>
      <url>https://zextras.jfrog.io/artifactory/java-sdk</url>
    </repository>
  </repositories>
</project>
